# sambal

./: .editorconfig  .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
src/sambal/: __init__.py  __main__.py  client.py  encoders.py  renderers.py  routes.py  security.py  settings.py  template.py
src/sambal/forms/: __init__.py  login.py
src/sambal/models/: __init__.py  application_settings.py  builtin.py  leaf.py  lost_and_found.py  ntfrs_settings.py  org.py  password_settings.py  quota.py  secret.py  security_object.py  tpm.py
src/sambal/resources/: __init__.py  application_settings.py  builtin.py  computer.py  container.py  gmsa.py  group.py  leaf.py  lost_and_found.py  org.py  password_settings.py  quota.py  resource.py  root.py  secret.py  security_object.py  tpm.py  user.py
src/sambal/static/: login.css
src/sambal/templates/: layout.jinja2  login.jinja2
src/sambal/tweens/: __init__.py  headers.py
src/sambal/views/: auth.py  domain.py  error.py  home.py
tests/: conftest.py  test_app.py  test_login.py  test_views.py
