[build-system]
requires = [
  "setuptools>=61.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "sambal"
version = "0.0.1"
authors = [
  { name = "Rob van der Linde", email = "robvdl@gmail.com" },
]
description = "Web admin for Samba using Pyramid"
readme = "README.md"
keywords = [ "pyramid", "samba" ]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Pyramid",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Networking",
]
dependencies = [
  "pyramid==2.0.2",
  "pyramid_jinja2==2.10.1",
  "pyramid_session_redis==1.6.3",
  "redis==5.0.3",
  "waitress==3.0.0",
  "WTForms==3.1.2",
]

[project.optional-dependencies]
test = [
  "pytest==8.1.1",
  "pytest-cov==4.1.0",
  "WebTest==3.0.0",
  "ruff==0.3.2",
]

[project.license]
text = "GPL-3.0-only"

[tool.setuptools]
include-package-data = true
license-files = [
  "LICENSE.txt",
]

[tool.setuptools.package-data]
"sambal" = [
  "*.txt",
  "*.ini",
  "*.cfg",
  "*.rst",
  "*.md",
  "static/**",
  "templates/**",
]

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=sambal --cov-branch --cov-report=term --cov-report=html:reports/htmlcov --cov-report=xml:reports/coverage.xml --junitxml=reports/junit.xml"

[tool.ruff]
exclude = [
    ".coverage",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".ruff_cache",
    ".tox",
    ".vscode",
    "build",
    "dist",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
